# src/routes/emotionAnalysis.routes.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import EmotionAnalysisController from '../controllers/emotionsAnalysis.controller';
+
+const router = Router();
+
+router.get('/', EmotionAnalysisController.getEmotionAnalysis);
+
+export default router;
