# src/types/emotions.types.ts
@@ -5,8 +5,18 @@ import { emotionAnalysis, emotionClasses } from '../db/schema/emotions.schema';
 export const EmotionSchema = createSelectSchema(emotionClasses);
 export const AddEmotionSchema = createInsertSchema(emotionClasses);
 
-export const EmotionAnalysisSchema = createSelectSchema(emotionAnalysis).omit({
-  journalId: true,
+export const EmotionAnalysisSchema = createSelectSchema(emotionAnalysis);
+
+export const GroupedEmotionAnalysisSchema = z.object({
+  journalId: z.number(),
+  journalDatetime: z.date(),
+  emotionAnalysis: z.array(
+    z.object({
+      emotion: z.string(),
+      confidence: z.number(),
+    }),
+  ),
+  analyzedAt: z.date(),
 });
 
 export const AddEmotionAnalysisSchema = createInsertSchema(
@@ -15,6 +25,13 @@ export const AddEmotionAnalysisSchema = createInsertSchema(
   journalId: true,
 });
 
+export type Emotion = z.infer<typeof EmotionSchema>;
+export type EmotionAnalysis = z.infer<typeof EmotionAnalysisSchema>;
+export type GroupedEmotionAnalysis = z.infer<
+  typeof GroupedEmotionAnalysisSchema
+>;
+export type AddEmotionAnalysis = z.infer<typeof AddEmotionAnalysisSchema>;
+
 export type EmotionsCount = {
   happy: number;
   sad: number;
@@ -22,7 +39,3 @@ export type EmotionsCount = {
   anger: number;
   scared: number;
 };
-
-export type Emotion = z.infer<typeof EmotionSchema>;
-export type EmotionAnalysis = z.infer<typeof EmotionAnalysisSchema>;
-export type AddEmotionAnalysis = z.infer<typeof AddEmotionAnalysisSchema>;
